updated modal window style to prevent overflow and allow scrolling

--- a/geoTest.css
+++ b/geoTest.css
@@ -22,3 +22,9 @@ body {
 #directionsButton {
     margin: 0 auto;
 }
+
+#stopInfo,
+#walkingDirections {
+    height: 98%;
+    overflow: auto;
+}
